feat: install packages for auth

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -30,8 +30,11 @@
     </button>
   </div>
 
+  <div class="user">
+    <h3>{{getUser()}}</h3>
+  </div>
 </nav>
-<!-- </div> -->
+
 
 <div id="client-panel"
      class="panel-layout"
