fix: set the header buttons to hidden if a user is authenticated

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -17,6 +17,7 @@
 
   <div class="button-layout">
     <button mat-icon-button
+            *ngIf="getUser() != null"
             matTooltip="Add Pet"
             (click)="showPanel($event, true)">
       <mat-icon><span class="material-symbols-outlined">
@@ -25,12 +26,15 @@
     </button>
     <button mat-icon-button
             matTooltip="Add Appointment"
+            *ngIf="getUser() != null"
             (click)="showPanel($event, false)">
       <mat-icon>alarm</mat-icon>
     </button>
   </div>
 
-  <div class="user">
+  <div class="user"
+       matTooltip="Double Click to Logout"
+       (dblclick)="logout()">
     <h3>{{getUser()}}</h3>
   </div>
 </nav>
@@ -88,6 +92,7 @@
 </div>
 
 <div (click)="hidePanels()">
-  <app-loader *ngIf="showLoader"></app-loader>
+  <app-loader *ngIf="showLoader"
+              style="z-index: 100;"></app-loader>
   <router-outlet></router-outlet>
 </div>
