feat: added logout functionality and set the action buttons to be hidden if a user isn't logged in

--- a/frontend/barks-and-bubbles-frontend/src/app/components/login/login.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="page_layout">
+<div class="page_layout"
+     *ngIf="!isLoggedIn">
   <mat-card>
     <div class="loginForm">
       <h3>Login</h3>
