feat: updated loader to not redirect to any page and added an error page for when a user tries to access data when not authenticated

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -94,5 +94,14 @@
 <div (click)="hidePanels()">
   <app-loader *ngIf="showLoader"
               style="z-index: 100;"></app-loader>
-  <router-outlet></router-outlet>
+  <router-outlet>
+
+  </router-outlet>
+
+  <div *ngIf="!isLoggedIn && init"
+       class="login-err-message">
+    <h1>Opps! </h1>
+    <h3> Looks like you forgot to login! Click this to <a href="
+       /login">here</a> to login</h3>
+  </div>
 </div>
