--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
@@ -60,33 +60,53 @@
           <button mat-icon-button
                   color="warn"
                   (click)="showErrorPanel = true"
-                  *ngIf="this.appointment && this.appointment.app && this.appointment.app.replies && getFailedMessages().length">
+                  *ngIf="this.appointment && this.appointment.app && this.appointment.app.replies && (getFailedMessages().length || showErrorBtn)">
             <mat-icon color="warn"
                       matBadgeColor="primary"
                       aria-hidden="false"
-                      matBadge="{{getFailedMessages().length}}">error</mat-icon>
+                      matBadge="{{getFailedMessages().length + this.unsentContactMsg.length}}">error</mat-icon>
           </button>
 
-          <div class="panel-layout scroll scroll-margin"
+          <div class="err-panel-layout scroll scroll-margin"
                *ngIf="showErrorPanel">
-            <h2 class="error-title">Messages with
-              Errors:</h2>
+            <ol>
+              <ng-container
+                            *ngIf="this.appointment && this.appointment.app && this.appointment.app.replies && (getFailedMessages().length || showErrorBtn)">
+                <h2 class="error-title">Contacts that messages couldn't be sent to:</h2>
+                <hr>
+                <ng-container *ngFor="let message of this.unsentContactMsg; index as i">
+                  <ng-container>
+                    <p class="err-list"><b>{{i+1}}.</b> Message could not be sent to <b>{{message.petParentName}}</b>
+                      for
+                      <b>{{message.petName}}'s</b>
+                      appointment,
+                      please check current contact method for this client.
+                    </p>
+                    <p class="err-list">Current contact method: <b>"{{message.contactMethod}}"</b></p>
+                    <hr>
+                  </ng-container>
+                </ng-container>
+              </ng-container>
+              <ng-container
+                            *ngIf="this.appointment && this.appointment.app && this.appointment.app.replies && getFailedMessages().length">
+                <h2 class="error-title">Messages with
+                  Errors:</h2>
+                <ng-container *ngFor="let message  of getFailedMessages(); index as i"
+                              style="width: 10em;">
+                  <h3><b>{{i+1}}.</b> Tried sending to: {{formatNumber(message.to)}}</h3>
 
-
-            <ng-container *ngFor="let message  of getFailedMessages(); index as i"
-                          style="width: 10em;">
-              <h3>{{i+1}}. Tried sending to: {{formatNumber(message.to)}}</h3>
-
-              <mat-card class="message error-message unsent">
-                <mat-card-content>
-                  <p>{{message.body}}</p>
-                </mat-card-content>
-                <mat-card-footer align="end">
-                  <sub>{{formatStatus(message.status)}} -
-                    {{this.DataService.messageDateFormat(message.dateUpdated)}}</sub>
-                </mat-card-footer>
-              </mat-card>
-            </ng-container>
+                  <mat-card class="message error-message unsent">
+                    <mat-card-content>
+                      <p>{{message.body}}</p>
+                    </mat-card-content>
+                    <mat-card-footer align="end">
+                      <sub>{{formatStatus(message.status)}} -
+                        {{this.DataService.messageDateFormat(message.dateUpdated)}}</sub>
+                    </mat-card-footer>
+                  </mat-card>
+                </ng-container>
+              </ng-container>
+            </ol>
           </div>
         </mat-card-title>
 
@@ -119,6 +139,16 @@
                         </mat-card-footer>
                       </mat-card>
                     </ng-container>
+                  </div>
+
+                  <div *ngIf="getErrCount(client)"
+                       class="error-msg"
+                       style="height: 10em; width: 95%; margin: 1em 0;">
+                    <p>
+                      <b>
+                        ERROR: Message could not sent
+                      </b>
+                    </p>
                   </div>
                 </div>
               </div>
