feat: added sort button to pet list and set it to be sorted ascendingly by default. Also adjusted styles of the pet list container for better layout styles

--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.html
@@ -1,5 +1,18 @@
-<div *ngIf="clients.length">
-  <mat-card *ngFor="let client of clients">
+<div class="title-layout">
+  <h2>Pet Clients
+    <button mat-icon-button
+            (click)="toggleSortOrder()"
+            matTooltip="Sort clients"><mat-icon>{{isAscending ? "keyboard_arrow_up" :
+        "keyboard_arrow_down"}}</mat-icon></button>
+  </h2>
+  <div></div>
+  <div></div>
+
+</div>
+
+<div *ngIf="clients.length"
+     class="card-container scroll">
+  <mat-card *ngFor="let client of clients | sort: 'petName' : isAscending">
     <mat-card-header>
       <mat-card-title>{{client.petName}}</mat-card-title>
     </mat-card-header>
@@ -8,7 +21,9 @@
       <p>Pet Parent: {{client.petParentName}}</p>
       <p>Animal Type: {{client.animalType}}</p>
       <p>Breed: {{client.breed}}</p>
-      <p>Contact Method: {{formatNumber(client.contactMethod)}}</p>
+      <p>Contact Method: {{client.contactMethod == "" || client.contactMethod.toLowerCase() == "messenger" ?
+        client.contactMethod :
+        formatNumber(client.contactMethod)}}</p>
       <p>Service Area: {{client.serviceArea}}</p>
     </mat-card-content>
   </mat-card>
