fix: removed duplicate style

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.scss
@@ -40,11 +40,11 @@ mat-card {
   }
 }
 
-@media (max-width: 1240px) {
+@media (max-width: 1440px) {
   .appointments-layout {
     grid-template-columns: repeat(2, 1fr);
     padding: 1em;
-    width: 94vw;
+    width: 30em;
   }
   .appointment-title {
     margin-left: 2em;
