feat: updated search error message

--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.html
@@ -51,6 +51,6 @@
   </mat-card>
 </div>
 
-<div *ngIf="!clientsQry.length">
-  <h2 class="error-msg">No Clients</h2>
+<div *ngIf="!clientsQry.length || !clients.length">
+  <h2 class="error-msg">{{!clients.length ? "No Clients" : "No clients found"}}</h2>
 </div>
