fix: adjusted login page to be more responsive and removed login message from the login page

--- a/frontend/barks-and-bubbles-frontend/src/app/components/login/login.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/login/login.component.html
@@ -37,7 +37,8 @@
         <button mat-raised-button
                 color="primary"
                 style="color: white"
-                [disabled]="loginForm.invalid">Sign In</button>
+                [disabled]="loginForm.invalid"
+                class="login-btn">Sign In</button>
 
       </form>
 
