fix: added mat-card to error message for consistent styles

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -98,10 +98,10 @@
 
   </router-outlet>
 
-  <div *ngIf="!isLoggedIn && init"
-       class="login-err-message">
+  <mat-card *ngIf="!isLoggedIn && init"
+            class="login-err-message">
     <h1>Opps! </h1>
     <h3> Looks like you forgot to login! Click this to <a href="
        /login">here</a> to login</h3>
-  </div>
+  </mat-card>
 </div>
