fix: fixed layout styles on the appointment page

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
@@ -158,7 +158,7 @@
 
           <div *ngIf="!hasMessageSent()">
             <h2 class="error-msg"
-                style="width: 100%;">Appointment Messages not sent</h2>
+                style="width: 100%; height: 60vh">Appointment Messages not sent</h2>
           </div>
         </mat-card-content>
 
